# bevy_alchemy

./: Cargo.toml  README.md
docs/: effected_by_spawn_example.md  with_effect_example.md  with_effects_example.md
examples/: README.md  poison.rs  poison_falloff.rs
examples/immediate_stats/: decaying_speed.rs  decaying_speed_auto_plugin.rs
src/: bundle.rs  command.rs  component.rs  lib.rs  registry.rs  timer.rs
src/component/: stack.rs  timer.rs
tests/: merge_mode.rs  spawn_syntax.rs  timer.rs
