[package]
name = "bevy_alchemy"
version = "0.2.0"
edition = "2024"
description = "An experimental, status effects-as-entities system for Bevy."
categories = ["game-development"]
keywords = ["game", "gamedev", "bevy", "status", "effect"]
repository = "https://github.com/AlephCubed/bevy_alchemy"
license = "MIT OR Apache-2.0"
authors = ["AlephCubed"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
bevy_app = { version = "0.18", default-features = false, features = [
  "bevy_reflect",
] }
bevy_ecs = { version = "0.18", default-features = false, features = [
  "bevy_reflect",
] }
bevy_reflect = { version = "0.18", default-features = false }
bevy_time = { version = "0.18", default-features = false, features = [
  "bevy_reflect",
] }
bevy_log = { version = "0.18", default-features = false }

[dev-dependencies]
bevy = "0.18"
bevy_auto_plugin = { version = "0.9" }
immediate_stats = { version = "0.4", features = ["bevy_auto_plugin"] }

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[[example]]
name = "poison"
path = "examples/poison.rs"

[[example]]
name = "poison_falloff"
path = "examples/poison_falloff.rs"

[[example]]
name = "decaying_speed"
path = "examples/immediate_stats/decaying_speed.rs"

[[example]]
name = "decaying_speed_auto_plugin"
path = "examples/immediate_stats/decaying_speed_auto_plugin.rs"
